# hexlet-flask-example

./: .gitignore  example.py  pyproject.toml
templates/users/: index.html  new.html  show.html  support.py
