[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = ""
authors = ["Alex Subach <alex_28.02@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
